--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Generate a <br>Strong Password</h1>
         <div class="input-box">
             <p id="display"></p>
-            <button onclick="randomGenerate();">Generate</button>
+            <button class="btn" onclick="randomGenerate();">Generate</button>
         </div>
         
     </div>
