--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <h1>Generate a <br>Strong Password</h1>
         <div class="input-box">
-            <p id="display"></p>
+            <p id="display"><i class="fa-solid fa-trash"></i></p>
             <button class="btn" onclick="randomGenerate();">Generate</button>
         </div>
         
