almost complete copy function bug

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         <div class="input-box">
             <p id="display"></p>
             <div class="icon">
-                <i class="fa-solid fa-copy " onclick="copyText();"></i>
+                <i class="fa-solid fa-copy " onclick="copy();"></i>
                 <i class="fa-solid fa-trash " onclick="clearText();"></i>
             </div>
         </div>
         <button class="btn" onclick="randomGenerate();">Generate</button>
         
     </div>
+
+    <p id="copyright"> © Copy Right reserved Raza ur Rehman 2024</p>
     <script src="app.js"></script>
 </body>
 
