--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="sweetalert2.min.css">
+        
     <link rel="stylesheet" href="style.css">
     <title>Random Password Generator</title>
 </head>
@@ -26,6 +28,7 @@
     </div>
 
     <p id="copyright"> © Copy Right reserved Raza ur Rehman 2024</p>
+    <script src="sweetalert2.min.js"></script>
     <script src="app.js"></script>
 </body>
 
